[package]
name = "bdktest"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_electrum = "=0.19.0"
anyhow = "1.0.94"
dotenv = "0.15.0"
bdk_core = "=0.3.0"
bdk_wallet = { version = "=1.0.0-beta.5", features = ["compiler", "bdk_file_store", "rusqlite", "keys-bip39"] }
bdk_esplora = { version = "=0.19.0", features = ["blocking"] }
bdk_bitcoind_rpc = "0.16.0"
secp256k1 = { version = "=0.29.0", features = ["rand-std"] }
rand = "0.8.5"
ctrlc = "2.0.1"