[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_electrum = "0.21.0"
anyhow = "1.0.97"
dotenv = "0.15.0"
bdk_wallet = { version = "1.1.0", features = ["compiler", "bdk_file_store", "rusqlite", "keys-bip39"] }
rand = "0.9.0"
musig2 = "0.2.4"#{ path = "../../musig2" }
