[package]
name = "rpc"
version = "0.1.0"
edition = "2021"
default-run = "musig-cli"

[dependencies]
bdk_bitcoind_rpc = "0.18.0"
bdk_wallet = "1.2.0"
clap = { version = "4.5.35", features = ["derive"] }
drop-stream = "0.3.2"
futures = "0.3.31"
musig2 = { version = "0.2.4", features = ["rand"] }
prost = "0.13.5"
rand = "0.8.5"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
tonic = "0.13.0"

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
tokio-util = { version = "0.7.14", features = ["rt"] }

[lints.clippy]
pedantic = "warn"
# Enable selected 'nursery' and 'restriction' lints...
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
branches_sharing_code = "warn"
iter_on_single_items = "warn"
iter_on_empty_collections = "warn"
missing_const_for_fn = "warn"
renamed_function_params = "warn"
significant_drop_tightening = "warn"
str_to_string = "warn"
try_err = "warn"
unused_trait_names = "warn"
use_self = "warn"
# Panics shall generally only result from bugs in callee code, so this gives too many false positives:
missing_panics_doc = { level = "allow", priority = 1 }
# Probably shouldn't annotate every (public) pure fn with '#[must_use]', so too many false positives:
must_use_candidate = { level = "allow", priority = 1 }
